LIB-796: Ensure main doc body does not overflow

--- a/src/RightSidebar/styles.module.css
+++ b/src/RightSidebar/styles.module.css
@@ -24,7 +24,7 @@
   position: sticky;
   right: 0;
   top: 0;
-  width: 252px;
+  width: var(--right-sidebar-width);
 }
 
 @media large-tablet-breakpoint-query {
